more writing, esp intro and acks

--- a/thesis/ack.tex
+++ b/thesis/ack.tex
@@ -2,20 +2,14 @@
 \chapter*{Acknowledgments}
 \addcontentsline{toc}{chapter}{Acknowledgments}
 
-Lots of people to thank! But I may have to trim this list (sorry)!
+I could not have completed this thesis without my incredible supervisors: Naomi McClure-Griffiths, who stepped into my panel when circumstances required it and made me feel just as welcome in her group as any student who had been there from the beginning; Ivy Wong, who was always available to help answer my many inane questions on the depths of radio astronomy; Julie Banfield, who supervised my first year making the jump to astronomy; and Cheng Soon Ong, whose wise and witty repertoire of advice will resonate with me forever.
 
-\begin{itemize}
-    \item my collaborators and people who have commented on my work: stas, larry, heinz, ray, avery, hongming, tim, jack, jakub, angus, henry, alec, anna
-    \item my office-mates, colleagues, and lunch buddies: adam, elly, lara, reggie, alex, tim 2, jens, lydia, cody, steve, adele, adam 2, phil, jack, karlie, angus, alec, henry, gosh there's a lot of people
-    \item howard and michelle
-    \item the fam
-    \item mitchell, nic, sarah, jakub, and other pillars of support
-    \item funders: the asa, the vice-chancellor fund
-    \item collaborations: rgz, of course
-    \item supervisors: cheng, naomi, ivy, julie, chris
-    \item notable people from my research groups: nick, nick 2, karlie, alec, jack, mengyan, dawei, james, lyla
-    \item people who proofread this thesis: henry, and probably rachel, sarah, jack, adam, elly, jakub
-\end{itemize}
+Much of this work was done in my office at Mount Stromlo while I bothered my office-mates: Eloise Birchall, Adam Rains, Lara Cullinane, and for a time Rajika Kuruwita and Alex Wallace. Without their welcome distractions I would not have been able to concentrate. Of course, Mount Stromlo was more than just my office, and I also must thank Henry Zovaro, Phil Taylor, Karlie Noon, Jack Livingston, Fiona Panther, and Alec Thomson for their contributions to the atmosphere of the observatory while I was there, as well as Howard Coyle and Michelle Cicolini for keeping the observatory running smoothly. I would also like to thank my colleagues at Data61: Cody Christopher, Steve Edwards, and Angus Gruen, who provided an excellent sounding board to my many astronomical problems.
+
+Chapters 4 and 5 rely heavily on results from the Radio Galaxy Zoo citizen science project. I would like to thank all 10~000+ volunteers who contributed to the project, as well as the members of the Radio Galaxy Zoo collaboration, notably Stas Shabala, Larry Rudnick, Heinz Andernach, Avery Garon, Anna Kapinska, and Ray Norris, all of whom contributed to discussion of my work for these chapters.
+
+Finally, I would like to thank my family, Rachel, Geoff, and Kelly Alger; as well as my partner Sarah Lawson; and my friends Nicholas Hogan, Mitchell Busby, and Jakub Nabaglo; for their emotional support through my PhD.
 
 \clearpage
-acknowledgement of country
+
+The work and writing behind this thesis was completed in Australia on the land of the Ngunnawal and Ngambri people. I would like to acknowledge and celebrate the traditional custodians of this land, and pay my respects to their Elders past, present, and emerging.
