--- a/thesis/listofconstants.tex
+++ b/thesis/listofconstants.tex
@@ -7,8 +7,10 @@ The values of the following constants, except where otherwise noted, are drawn f
 \begin{longtable}{llll}
 \toprule
 \bfseries Symbol & \bfseries Unit & \bfseries Name & \bfseries Value \\\midrule\endhead
+$\epsilon_0$ & F m$^{-1}$ & Vacuum permittivity & $8.8541878128(13) \times 10^{-12}$ \\
 $G$ & m$^3$ kg$^{-1}$ s$^{-2}$ & Gravitational constant & $6.67430(15) \times 10^{-11}$ \\
 $m_p$ & kg & Proton mass & $1.67262192369(51) \times 10^{-27}$ \\
+$m_e$ & kg & Electron mass & $9.1093837015(28) \times 10^{-31}$\\
 $c$ & m s$^{-1}$ & Speed of light & $2.99792458 \times 10^8$ \\
 $\sigma_T$ & m$^2$ & Thomson cross section & $6.6524587321(60) \times 10^{-29}$\\
 \bottomrule
