--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -4673,21 +4673,218 @@ equivalently black hole mass). All these features agree with those of outflows o
 	author = {Scalzo, R. A. and Yuan, F. and Childress, M. J. and Möller, A. and Schmidt, B. P. and Tucker, B. E. and Zhang, B. R. and Onken, C. A. and Wolf, C. and Astier, P. and Betoule, M. and Regnault, N.},
 	year = {2017},
 	pages = {e030},
-	file = {Scalzo et al. - 2017 - The SkyMapper Transient Survey.pdf:/Users/alger/Zotero/storage/3UDGTRUL/Scalzo et al. - 2017 - The SkyMapper Transient Survey.pdf:application/pdf}
+	file = {Scalzo et al. - 2017 - The SkyMapper Transient Survey.pdf:/Users/alger/Zotero/storage/3UDGTRUL/Scalzo et al. - 2017 - The SkyMapper Transient Survey.pdf:application/pdf;Scalzo et al. - 2017 - The SkyMapper Transient Survey.pdf:/Users/alger/Zotero/storage/NQ3BML97/Scalzo et al. - 2017 - The SkyMapper Transient Survey.pdf:application/pdf}
 }
 
-@article{scalzo_skymapper_2017-1,
-	title = {The {SkyMapper} {Transient} {Survey}},
-	volume = {34},
-	issn = {1323-3580, 1448-6083},
-	url = {https://www.cambridge.org/core/product/identifier/S1323358017000248/type/journal_article},
-	doi = {10.1017/pasa.2017.24},
-	abstract = {The SkyMapper 1.3 m telescope at Siding Spring Observatory has now begun regular operations. Alongside the Southern Sky Survey, a comprehensive digital survey of the entire southern sky, SkyMapper will carry out a search for supernovae and other transients. The search strategy, covering a total footprint area of ∼ 2000 deg2 with a cadence of ≤ 5 days, is optimised for discovery and follow-up of low-redshift type Ia supernovae to constrain cosmic expansion and peculiar velocities. We describe the search operations and infrastructure, including a parallelised software pipeline to discover variable objects in difference imaging; simulations of the performance of the survey over its lifetime; public access to discovered transients; and some ﬁrst results from the Science Veriﬁcation data.},
+@article{tully_new_1977,
+	title = {A new method of determining distances to galaxies},
+	volume = {54},
+	issn = {0004-6361},
+	url = {http://adsabs.harvard.edu/abs/1977A%26A....54..661T},
+	abstract = {It is proposed that for spiral galaxies there is a good correlation between the global neutral hydrogen line profile width, a
+distance-independent observable, and the absolute magnitude (or
+diameter). Such a relation is first sought in nearby calibration galaxies of the Local Group, the M 81 group, and the M 101 group, with well-determined distances, accurately known photometric properties, and accurately known global hydrogen profile width. On the basis of these calibration magnitude-global profile width and diameter-global profile width relationships, distances were derived for the Virgo cluster and the Ursa Major cluster. The distance moduli obtained are 30.6 m for the Virgo cluster and 30.5 m for the Ursa Major cluster. The result for the Virgo cluster suggests a Hubble constant of 80 km per sec per Mpc.},
+	urldate = {2020-12-28},
+	journal = {Astronomy and Astrophysics},
+	author = {Tully, R. B. and Fisher, J. R.},
+	month = feb,
+	year = {1977},
+	keywords = {Astronomical Photometry, Calibrating, Distance Measuring Equipment, Galactic Clusters, Galactic Structure, H Lines, Hubble Diagram, Luminous Intensity, Spectral Line Width, Spiral Galaxies, Synoptic Measurement, Telescopes},
+	pages = {661--673},
+	file = {Full Text PDF:/Users/alger/Zotero/storage/EFD89LI7/Tully and Fisher - 1977 - A new method of determining distances to galaxies.pdf:application/pdf}
+}
+
+@article{baum_photoelectric_1962,
+	title = {Photoelectric {Magnitudes} and {Red}-{Shifts}},
+	volume = {15},
+	url = {http://adsabs.harvard.edu/abs/1962IAUS...15..390B},
+	abstract = {Not Available},
+	urldate = {2020-12-28},
+	author = {Baum, W. A.},
+	year = {1962},
+	note = {Conference Name: Problems of Extra-Galactic Research},
+	pages = {390},
+	file = {Full Text PDF:/Users/alger/Zotero/storage/99N3XSLJ/Baum - 1962 - Photoelectric Magnitudes and Red-Shifts.pdf:application/pdf}
+}
+
+@article{breiman_random_2001,
+	title = {Random {Forests}},
+	volume = {45},
+	issn = {1573-0565},
+	url = {https://doi.org/10.1023/A:1010933404324},
+	doi = {10.1023/A:1010933404324},
+	abstract = {Random forests are a combination of tree predictors such that each tree depends on the values of a random vector sampled independently and with the same distribution for all trees in the forest. The generalization error for forests converges a.s. to a limit as the number of trees in the forest becomes large. The generalization error of a forest of tree classifiers depends on the strength of the individual trees in the forest and the correlation between them. Using a random selection of features to split each node yields error rates that compare favorably to Adaboost (Y. Freund \& R. Schapire, Machine Learning: Proceedings of the Thirteenth International conference, ***, 148–156), but are more robust with respect to noise. Internal estimates monitor error, strength, and correlation and these are used to show the response to increasing the number of features used in the splitting. Internal estimates are also used to measure variable importance. These ideas are also applicable to regression.},
 	language = {en},
-	urldate = {2020-12-26},
-	journal = {Publications of the Astronomical Society of Australia},
-	author = {Scalzo, R. A. and Yuan, F. and Childress, M. J. and Möller, A. and Schmidt, B. P. and Tucker, B. E. and Zhang, B. R. and Onken, C. A. and Wolf, C. and Astier, P. and Betoule, M. and Regnault, N.},
+	number = {1},
+	urldate = {2020-12-28},
+	journal = {Machine Learning},
+	author = {Breiman, Leo},
+	month = oct,
+	year = {2001},
+	pages = {5--32},
+	file = {Springer Full Text PDF:/Users/alger/Zotero/storage/9YAH9KRY/Breiman - 2001 - Random Forests.pdf:application/pdf}
+}
+
+@article{breiman_bagging_1996,
+	title = {Bagging {Predictors}},
+	volume = {24},
+	issn = {1573-0565},
+	url = {https://doi.org/10.1023/A:1018054314350},
+	doi = {10.1023/A:1018054314350},
+	abstract = {Bagging predictors is a method for generating multiple versions of a predictor and using these to get an aggregated predictor. The aggregation averages over the versions when predicting a numerical outcome and does a plurality vote when predicting a class. The multiple versions are formed by making bootstrap replicates of the learning set and using these as new learning sets. Tests on real and simulated data sets using classification and regression trees and subset selection in linear regression show that bagging can give substantial gains in accuracy. The vital element is the instability of the prediction method. If perturbing the learning set can cause significant changes in the predictor constructed, then bagging can improve accuracy.},
+	language = {en},
+	number = {2},
+	urldate = {2020-12-28},
+	journal = {Machine Learning},
+	author = {Breiman, Leo},
+	month = aug,
+	year = {1996},
+	pages = {123--140},
+	file = {Springer Full Text PDF:/Users/alger/Zotero/storage/IBUZJIJZ/Breiman - 1996 - Bagging Predictors.pdf:application/pdf}
+}
+
+@article{waibel_phoneme_1989,
+	title = {Phoneme recognition using time-delay neural networks},
+	volume = {37},
+	issn = {0096-3518},
+	doi = {10.1109/29.21701},
+	abstract = {The authors present a time-delay neural network (TDNN) approach to phoneme recognition which is characterized by two important properties: (1) using a three-layer arrangement of simple computing units, a hierarchy can be constructed that allows for the formation of arbitrary nonlinear decision surfaces, which the TDNN learns automatically using error backpropagation; and (2) the time-delay arrangement enables the network to discover acoustic-phonetic features and the temporal relationships between them independently of position in time and therefore not blurred by temporal shifts in the input. As a recognition task, the speaker-dependent recognition of the phonemes B, D, and G in varying phonetic contexts was chosen. For comparison, several discrete hidden Markov models (HMM) were trained to perform the same task. Performance evaluation over 1946 testing tokens from three speakers showed that the TDNN achieves a recognition rate of 98.5\% correct while the rate obtained by the best of the HMMs was only 93.7\%.{\textless}{\textgreater}},
+	number = {3},
+	journal = {IEEE Transactions on Acoustics, Speech, and Signal Processing},
+	author = {Waibel, A. and Hanazawa, T. and Hinton, G. and Shikano, K. and Lang, K. J.},
+	month = mar,
+	year = {1989},
+	note = {Conference Name: IEEE Transactions on Acoustics, Speech, and Signal Processing},
+	keywords = {Acoustic testing, Backpropagation, Character recognition, Computer networks, Computer science, computing units, error backpropagation, hidden Markov models, Hidden Markov models, Loudspeakers, neural nets, Neural networks, nonlinear decision surfaces, phoneme recognition, Psychology, speech, speech recognition, Speech recognition, temporal shifts, testing tokens, three-layer, time-delay neural networks},
+	pages = {328--339},
+	file = {IEEE Xplore Abstract Record:/Users/alger/Zotero/storage/QE9Z2XRQ/21701.html:text/html;IEEE Xplore Full Text PDF:/Users/alger/Zotero/storage/WWPY6Q9P/Waibel et al. - 1989 - Phoneme recognition using time-delay neural networ.pdf:application/pdf}
+}
+
+@misc{diamond_ska_2017,
+	title = {{SKA} {Community} {Briefing}},
+	url = {https://www.skatelescope.org/ska-community-briefing-18jan2017/},
+	urldate = {2021-02-01},
+	author = {Diamond, Philip},
+	month = jan,
 	year = {2017},
-	pages = {e030},
-	file = {1702.05585.pdf:/Users/alger/Zotero/storage/NQ3BML97/1702.05585.pdf:application/pdf}
+	file = {SKA-Community-Briefing-18Jan2017.pdf:/Users/alger/Zotero/storage/2IW7S99B/SKA-Community-Briefing-18Jan2017.pdf:application/pdf}
+}
+
+@article{kapinska_emu_2020,
+	title = {{EMU}: {The} {Evolutionary} {Map} of the {Unverse} radio sky survey},
+	volume = {236},
+	shorttitle = {{EMU}},
+	url = {http://adsabs.harvard.edu/abs/2020AAS...23632206K},
+	abstract = {Evolutionary Map of the Universe (EMU; http://emu-survey.org) is a
+new-generation wide-field radio continuum sky survey being delivered by the Australian Square Kilometre Array Pathfinder (ASKAP) telescope. The EMU survey will image the entire Southern Sky, extending to at least +30deg North, with the aim of reaching 15 microJy/bm noise and 10 arcsec resolution at 1 GHz. EMU is expected to detect 70 million radio sources, including normal star-forming galaxies out to z=0.3, starburst galaxies and radio-quiet AGN out to z=1, radio-loud AGN across the cosmic time back to the epoch of reionisation, and to map the Cosmic Web.
+Furthermore, cosmological studies are being undertaken with the survey (large-scale structure, cosmological parameters). And, with the
+privileged location in the Southern hemisphere, EMU is surveying radio stars and mapping continuum radio emission of the Galactic Plane and Centre. Given the anticipated vast amount of data, EMU is also preparing for the unexpected discoveries, and is developing automated methods to mine the radio survey data through machine learning and citizen science. The EMU Pilot Survey was observed in 2019, reaching angular resolution of approximately 12 arcsec and noise levels of 20-25 microJy/bm at 943 MHz, over a 270 sq.deg region within the Dark Energy Survey (DES) footprint. Its analysis is currently undergoing. Here, I present the survey parameters, products and results already being delivered with the EMU early science and pilot survey data.},
+	urldate = {2021-01-02},
+	author = {Kapinska, A. D.},
+	month = jun,
+	year = {2020},
+	note = {Conference Name: American Astronomical Society Meeting Abstracts \#236},
+	pages = {322.06}
+}
+
+@article{mostert_unveiling_2020,
+	title = {Unveiling the rarest morphologies of the {LOFAR} {Two}-metre {Sky} {Survey} radio source population with self-organised maps},
+	volume = {2011},
+	url = {http://adsabs.harvard.edu/abs/2020arXiv201106001M},
+	abstract = {The Low Frequency Array (LOFAR) Two-metre Sky Survey (LoTSS) is a 
+low-frequency radio continuum survey of the Northern sky at an
+unparalleled resolution and sensitivity. In order to fully exploit this
+huge dataset and those produced by the Square Kilometre Array in the
+next decade, automated methods in machine learning and data-mining will
+be increasingly essential both for morphological classifications and for
+identifying optical counterparts to the radio sources. Using
+self-organising maps (SOMs), a form of unsupervised machine learning, we
+created a dimensionality reduction of the radio morphologies for the
+\${\textbackslash}sim\$25k extended radio continuum sources in the LoTSS first data
+release, which is only \${\textbackslash}sim\$2 percent of the final LoTSS survey. We
+made use of {\textbackslash}textsc\{PINK\}, a code which extends the SOM algorithm with
+rotation and flipping invariance, increasing its suitability and
+effectiveness for training on astronomical sources. After training, the
+SOMs can be used for a wide range of science exploitation and we present
+an illustration of their potential by finding an arbitrary number of
+morphologically rare sources in our training data (424 square degrees)
+and subsequently in an area of the sky (\${\textbackslash}sim\$5300 square degrees)
+outside the training data. Objects found in this way span a wide range
+of morphological and physical categories: extended jets of radio active
+galactic nuclei, diffuse cluster haloes and relics, and nearby spiral
+galaxies. Finally, to enable accessible, interactive, and intuitive data
+exploration, we showcase the LOFAR-PyBDSF Visualisation Tool, which
+allows users to explore the LoTSS dataset through the trained SOMs.},
+	urldate = {2021-01-02},
+	journal = {arXiv e-prints},
+	author = {Mostert, Rafaël I. J. and Duncan, Kenneth J. and Röttgering, Huub J. A. and Polsterer, Kai L. and Best, Philip N. and Brienza, Marisa and Brüggen, Marcus and Hardcastle, Martin J. and Jurlin, Nika and Mingo, Beatriz and Morganti, Raffaella and Shimwell, Tim and Smith, Dan and Williams, Wendy L.},
+	month = nov,
+	year = {2020},
+	keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - Instrumentation and Methods for Astrophysics},
+	pages = {arXiv:2011.06001},
+	file = {Full Text PDF:/Users/alger/Zotero/storage/GEFQRNLX/Mostert et al. - 2020 - Unveiling the rarest morphologies of the LOFAR Two.pdf:application/pdf}
+}
+
+@article{koribalski_wallaby_2020,
+	title = {{WALLABY} - an {SKA} {Pathfinder} {HI} survey},
+	volume = {365},
+	issn = {0004-640X},
+	url = {http://adsabs.harvard.edu/abs/2020Ap%26SS.365..118K},
+	doi = {10.1007/s10509-020-03831-4},
+	abstract = {The Widefield ASKAP L-band Legacy All-sky Blind surveY (WALLABY) is a next-generation survey of neutral hydrogen (HI) in the Local
+Universe. It uses the widefield, high-resolution capability of the Australian Square Kilometer Array Pathfinder (ASKAP), a radio
+interferometer consisting of 36 ×12 -m dishes equipped with
+Phased-Array Feeds (PAFs), located in an extremely radio-quiet zone in Western Australia. WALLABY aims to survey three-quarters of the sky (-90∘{\textless}δ {\textless}+30∘) to a redshift
+of z ≲0.26 , and generate spectral line image cubes at ∼30
+arcsec resolution and ∼1.6 mJy beam-1 per 4 km
+s-1 channel sensitivity. ASKAP's instantaneous field of view at 1.4 GHz, delivered by the PAF's 36 beams, is about 30 sq deg. At an integrated signal-to-noise ratio of five, WALLABY is expected to detect around half a million galaxies with a mean redshift of z
+∼0.05 (∼200 Mpc). The scientific goals of WALLABY include:
+(a) a census of gas-rich galaxies in the vicinity of the Local Group; (b) a study of the HI properties of galaxies, groups and clusters, in particular the influence of the environment on galaxy evolution; and (c) the refinement of cosmological parameters using the spatial and redshift distribution of low-bias gas-rich galaxies. For context we provide an overview of recent and planned large-scale HI surveys. Combined with existing and new multi-wavelength sky surveys, WALLABY will enable an exciting new generation of panchromatic studies of the Local Universe. — First results from the WALLABY pilot survey
+are revealed, with initial data products publicly available in the CSIRO ASKAP Science Data Archive (CASDA).},
+	urldate = {2021-01-02},
+	journal = {Astrophysics and Space Science},
+	author = {Koribalski, Bärbel S. and Staveley-Smith, L. and Westmeier, T. and Serra, P. and Spekkens, K. and Wong, O. I. and Lee-Waddell, K. and Lagos, C. D. P. and Obreschkow, D. and Ryan-Weber, E. V. and Zwaan, M. and Kilborn, V. and Bekiaris, G. and Bekki, K. and Bigiel, F. and Boselli, A. and Bosma, A. and Catinella, B. and Chauhan, G. and Cluver, M. E. and Colless, M. and Courtois, H. M. and Crain, R. A. and de Blok, W. J. G. and Dénes, H. and Duffy, A. R. and Elagali, A. and Fluke, C. J. and For, B.-Q. and Heald, G. and Henning, P. A. and Hess, K. M. and Holwerda, B. W. and Howlett, C. and Jarrett, T. and Jones, D. H. and Jones, M. G. and Józsa, G. I. G. and Jurek, R. and Jütte, E. and Kamphuis, P. and Karachentsev, I. and Kerp, J. and Kleiner, D. and Kraan-Korteweg, R. C. and López-Sánchez, Á. R. and Madrid, J. and Meyer, M. and Mould, J. and Murugeshan, C. and Norris, R. P. and Oh, S.-H. and Oosterloo, T. A. and Popping, A. and Putman, M. and Reynolds, T. N. and Rhee, J. and Robotham, A. S. G. and Ryder, S. and Schröder, A. C. and Shao, Li and Stevens, A. R. H. and Taylor, E. N. and vanÂ der Hulst, J. M. and Verdes-Montenegro, L. and Wakker, B. P. and Wang, J. and Whiting, M. and Winkel, B. and Wolf, C.},
+	month = jul,
+	year = {2020},
+	keywords = {formation, galaxies: evolution, ISM, kinematics \& dynamics, large-scale structure, Radio lines: galaxies, surveys},
+	pages = {118},
+	file = {Full Text PDF:/Users/alger/Zotero/storage/GTYKZ658/Koribalski et al. - 2020 - WALLABY - an SKA Pathfinder HI survey.pdf:application/pdf}
+}
+
+@article{murphy_vast_2013,
+	title = {{VAST}: {An} {ASKAP} {Survey} for {Variables} and {Slow} {Transients}},
+	volume = {30},
+	issn = {1323-3580},
+	shorttitle = {{VAST}},
+	url = {http://adsabs.harvard.edu/abs/2013PASA...30....6M},
+	doi = {10.1017/pasa.2012.006},
+	abstract = {The Australian Square Kilometre Array Pathfinder (ASKAP) will give us an unprecedented opportunity to investigate the transient sky at radio wavelengths. In this paper we present VAST, an ASKAP survey for
+Variables and Slow Transients. VAST will exploit the wide-field survey capabilities of ASKAP to enable the discovery and investigation of variable and transient phenomena from the local to the cosmological, including flare stars, intermittent pulsars, X-ray binaries, magnetars, extreme scattering events, interstellar scintillation, radio supernovae, and orphan afterglows of gamma-ray bursts. In addition, it will allow us to probe unexplored regions of parameter space where new classes of transient sources may be detected. In this paper we review the known radio transient and variable populations and the current results from blind radio surveys. We outline a comprehensive program based on a multi-tiered survey strategy to characterise the radio transient sky through detection and monitoring of transient and variable sources on the ASKAP imaging timescales of 5 s and greater. We also present an analysis of the expected source populations that we will be able to detect with VAST.},
+	urldate = {2021-01-02},
+	journal = {Publications of the Astronomical Society of Australia},
+	author = {Murphy, Tara and Chatterjee, Shami and Kaplan, David L. and Banyer, Jay and Bell, Martin E. and Bignall, Hayley E. and Bower, Geoffrey C. and Cameron, Robert A. and Coward, David M. and Cordes, James M. and Croft, Steve and Curran, James R. and Djorgovski, S. G. and Farrell, Sean A. and Frail, Dale A. and Gaensler, B. M. and Galloway, Duncan K. and Gendre, Bruce and Green, Anne J. and Hancock, Paul J. and Johnston, Simon and Kamble, Atish and Law, Casey J. and Lazio, T. Joseph W. and Lo, Kitty K. and Macquart, Jean-Pierre and Rea, Nanda and Rebbapragada, Umaa and Reynolds, Cormac and Ryder, Stuart D. and Schmidt, Brian and Soria, Roberto and Stairs, Ingrid H. and Tingay, Steven J. and Torkelsson, Ulf and Wagstaff, Kiri and Walker, Mark and Wayth, Randall B. and Williams, Peter K. G.},
+	month = feb,
+	year = {2013},
+	keywords = {galaxies: general, ISM: general, radio continuum: general, stars: general, surveys, telescopes},
+	pages = {e006},
+	file = {Full Text PDF:/Users/alger/Zotero/storage/N9CSUE5K/Murphy et al. - 2013 - VAST An ASKAP Survey for Variables and Slow Trans.pdf:application/pdf}
+}
+
+@article{mcconnell_rapid_2020,
+	title = {The {Rapid} {ASKAP} {Continuum} {Survey} {I}: {Design} and first results},
+	volume = {37},
+	issn = {1323-3580},
+	shorttitle = {The {Rapid} {ASKAP} {Continuum} {Survey} {I}},
+	url = {http://adsabs.harvard.edu/abs/2020PASA...37...48M},
+	doi = {10.1017/pasa.2020.41},
+	abstract = {The Rapid ASKAP Continuum Survey (RACS) is the first large-area survey to be conducted with the full 36-antenna Australian Square Kilometre Array Pathfinder (ASKAP) telescope. RACS will provide a shallow model of the ASKAP sky that will aid the calibration of future deep ASKAP surveys. RACS will cover the whole sky visible from the ASKAP site in Western Australia and will cover the full ASKAP band of 700-1800 MHz. The RACS images are generally deeper than the existing NRAO VLA Sky Survey and Sydney University Molonglo Sky Survey radio surveys and have better spatial resolution. All RACS survey products will be public, including radio images (with \$∼\$ 15 arcsec resolution) and
+catalogues of about three million source components with spectral index and polarisation information. In this paper, we present a description of the RACS survey and the first data release of 903 images covering the sky south of declination \$+41{\textasciicircum}{\textbackslash}circ\$ made over a 288-MHz band centred at 887.5 MHz.},
+	urldate = {2021-01-02},
+	journal = {Publications of the Astronomical Society of Australia},
+	author = {McConnell, D. and Hale, C. L. and Lenc, E. and Banfield, J. K. and Heald, George and Hotan, A. W. and Leung, James K. and Moss, Vanessa A. and Murphy, Tara and O'Brien, Andrew and Pritchard, Joshua and Raja, Wasim and Sadler, Elaine M. and Stewart, Adam and Thomson, Alec J. M. and Whiting, M. and Allison, James R. and Amy, S. W. and Anderson, C. and Ball, Lewis and Bannister, Keith W. and Bell, Martin and Bock, Douglas C.-J. and Bolton, Russ and Bunton, J. D. and Chippendale, A. P. and Collier, J. D. and Cooray, F. R. and Cornwell, T. J. and Diamond, P. J. and Edwards, P. G. and Gupta, N. and Hayman, Douglas B. and Heywood, Ian and Jackson, C. A. and Koribalski, Bärbel S. and Lee-Waddell, Karen and McClure-Griffiths, N. M. and Ng, Alan and Norris, Ray P. and Phillips, Chris and Reynolds, John E. and Roxby, Daniel N. and Schinckel, Antony E. T. and Shields, Matt and Tremblay, Chenoa and Tzioumis, A. and Voronkov, M. A. and Westmeier, Tobias},
+	month = nov,
+	year = {2020},
+	keywords = {radio continuum: general, surveys},
+	pages = {e048},
+	file = {Full Text PDF:/Users/alger/Zotero/storage/25CZ6SGG/McConnell et al. - 2020 - The Rapid ASKAP Continuum Survey I Design and fir.pdf:application/pdf}
 }
