--- a/thesis/abstract.tex
+++ b/thesis/abstract.tex
@@ -1,7 +1,8 @@
 \chapter*{Abstract}
 \addcontentsline{toc}{chapter}{Abstract}
 \vspace{-1em}
-Put your abstract here. \emph{An abstract of 250-500 words is on the page or pages following the acknowledgement. The electronic version of the abstract must use standard text only.}
+
+In this thesis, I introduce machine learning methods for use in wide-area radio surveys and demonstrate their application to radio astronomy data. I developed an automated machine learning method for cross-identifying radio objects with their infrared counterparts, training the algorithm with data from the citizen science project Radio Galaxy Zoo. The trained result performed comparably to an algorithm trained on expert cross-identifications, demonstrating the benefit of non-expert labelling in radio astronomy. By examining the theoretical maximum accuracy of this algorithm I showed that existing pilot studies for future surveys were not sufficiently large enough to train machine learning methods. I showed the use of my cross-identification algorithm by applying it instead to a large survey, Faint Images of the Radio Sky at Twenty-centimeters (FIRST), producing the largest catalogue of cross-identified extended sources available at the time of writing. From this catalogue, I calculated a mid-infrared-divided fractional radio luminosity function as well as an estimate of energy injected into the intergalactic medium by active galactic nuclei jets --- one of the first applications of machine learning to radio astronomy to obtain a physics result. A key result from this work was that the limitation in our sample size was not due to the number of radio objects cross-identified but rather by the number of available redshift measurements. Finally, I developed interpretable features for spectropolarimetric measurements of radio sources and used these features to design a machine learning algorithm that can identify Faraday complexity, while the features themselves may be used for other tasks. The methods in this thesis will be applicable to future radio surveys such as the Evolutionary Map of the Universe (EMU) continuum survey and the Polarised Sky Survey of the Universe's Magnetism (POSSUM), as well as surveys produced with the Square Kilometre Array.
 
 %%% Local Variables: 
 %%% mode: latex
