--- a/thesis/frontmatter.tex
+++ b/thesis/frontmatter.tex
@@ -37,8 +37,10 @@
     \begin{itemize}
       \item \emph{Radio Galaxy Zoo: Machine learning for radio source host galaxy cross-identification}, by \textbf{M. J. Alger}, J. K. Banfield, C. S. Ong, L. Rudnick, O. I. Wong, C. Wolf, H. Andernach, R. P. Norris, and S. S. Shabala. Published in 2018 in the \emph{Monthly Notices of the Royal Astronomy Society}.
       \item \emph{Radio Galaxy Zoo: Radio luminosity functions of extended sources}, by \textbf{M. J. Alger}, O. I. Wong, C. S. Ong, N. M. McClure-Griffiths, H. Andernach, L. Rudnick, S. S. Shabala, A. F. Garon, J. K. Banfield, A. D. Kapi\'nska, and R. P. Norris. Not yet submitted.
-      \item \emph{Interpretable Faraday Complexity Classification}, by \textbf{M. J. Alger}, C. S. Ong, N. M. McClure-Griffiths, J. D. Livingston, O. I. Wong, and J. L. Nabaglo. Not yet submitted.
+      \item \emph{Interpretable Faraday Complexity Classification}, by \textbf{M. J. Alger}, J. D. Livingston, N. M. McClure-Griffiths, J. L. Nabaglo., O. I. Wong, and C. S. Ong. Submitted to \emph{Publications of the Astronomical Society of Australia}.
     \end{itemize}
+
+    For all three papers I wrote the vast majority of the content, produced all figures except where noted, and conducted all experiments. Other authors reviewed the papers, made suggestions, and discussed ideas.
 
     Senior author or collaborating authors endorsement:
 
